src/test/deca/syntax/valid/decaObjet/emptyClass/02comparaisonLower.deca
class A {

}

{
    A a = new A();
    A b = new A();
    if (a < b) {

    }
    if (a <= b) {

    }
}