src/test/deca/syntax/invalid/intermediaire2/elseif/01noespace.deca
{
    if (2 < 1) {
        print("Trop petit !");
    }
    elseif (2 > 1) {
        print("Trop grand !");
    }
}